<resources>
    <string name="app_name">P1_Android</string>
    <string name="host">Host</string>
    <string name="hostDefaultValue">10.0.2.2:9000</string>
    <string name="username">Username</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="totalDistanceTravelled">Total Distance Travelled</string>
    <string name="distanceValue">0.0</string>
    <string name="nextTimeInterval">Next Time Interval</string>
    <string name="nextTimeIntervalValue">---</string>
    <string name="averageSpeed">Average Speed</string>
    <string name="averageSpeedValue">0.0</string>
</resources>
